test/parsetest/valid/multiple_neg.java
class Valid1 {
	public static void main(String[] args) {
		int i = - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 5;
	}
}