test/parsetest/invalid/redefinition_of_variable_in_same_scope8.java
class A {
  public static void main(String[] args) {
  }

  public void bla(int a, int b){
    while (a == 0) int a;
  }
}